<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="app_name">礼物搜</string>
    <string name="menu_so">礼物搜</string>
    <string name="menu_search">搜索</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_more">更多</string>
    <string name="menu_more_order">我的订单</string>
    <string name="menu_more_about">关于礼物搜</string>
    <string name="menu_more_question">常见问题</string>
    <string name="menu_more_agreement">用户协议</string>
    <string name="menu_more_advice">意见建议</string>
    <string name="menu_more_contact">联系我们</string>
    <string name="menu_more_version">检测新版本</string>
    <string name="title_activity_product">礼物搜索</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="footer_text">©2014 liwuso.com 版权所有</string>
    <string name="nav_send_person">您要送谁礼物?</string>
    <string name="nav_send_age">请选择%s的年龄</string>
    <string name="nav_send_aim">请选择送礼目的</string>
    <string name="nav_send_product">礼物推荐</string>
    <string name="nav_send_product_detail">礼物详情</string>
    <string name="nav_favorite">我的收藏(%d)</string>
    <string name="favorite_added">已收藏</string>
    <string name="favorite_not_found">矮油，您还没有收藏任何礼物~</string>
    <string name="favorite_find_new">去发现礼物</string>
    <string name="nav_more">更多</string>
    <string name="nav_taobao">手机淘宝网</string>
    <string name="action_gift_search">搜索</string>
    <string name="action_gift_favorite">收藏</string>
    <string name="action_gift_more">更多</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="hello_blank_fragment"></string>
    <string name="gift_all">全部</string>
    <string name="gift_male">男性</string>
    <string name="gift_female">女性</string>
    <string name="gift_actionbar_more">更多</string>
    <string name="age_actionbar_title">请选择女朋友的年龄</string>
    <string name="purpose_actionbar_title">请选择送礼目的</string>
    <string name="product_actionbar_title">礼物推荐</string>
    <string name="p_sub_relative_gifts">相关礼物</string>
    <string name="p_sub_buy">去淘宝购买</string>
    <string name="p_sub_add">收藏</string>
    <string name="p_sub_added">已收藏</string>
    <string name="p_sub_comment">礼物点评：</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="btn_product_detail">礼物详情</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="person0">全部</string>
    <string name="person1">女性</string>
    <string name="person2">男性</string>
    <string name="image_content"></string>
    <string name="so_current_tip">已选择：   </string>
    <string name="blank"></string>
    <string name="search_txt">请输入关键字搜索礼物</string>
    <string name="more_advice_content">请输入意见建议内容</string>
    <string name="more_advice_email">请输入您常用的电子邮箱</string>
    <string name="more_advice_submit">提交</string>
    <string name="more_advice_question">常见问题</string>

    <string-array name="more_info">
        <item><![CDATA[<div style="font-weight:bold;line-height:2;"><p>礼物搜（www.liwuso.com）是一款快速找到礼物的导购应用，用户只需要选择送礼的对象、年龄和目的，简单3步就能找到满意的礼物。无论是生日、结婚、节日、商务还是纪念送礼，礼物搜都会是您最棒的私人送礼顾问。</p><p>我们寻求将互联网技术与专家送礼经验加以整合，帮助消费者从繁重的甄选礼物的过程中解脱出来。用户只需要选择“送给谁”、“ta的年龄”、“送礼目的”，我们的送礼专家经验系统就能为您推荐高匹配度的产品，让你轻轻松松网购礼物，并在此过程中享受温馨愉悦的体验。</p></p>「应用优点」<br />1、快捷找到满意的礼物<br />2、重要节日推送消息提醒<br />3、收藏喜欢的商品</p><br />「大事件」<br />2014年8月  礼物搜安卓应用v1.0上线<br />2014年5月  礼物搜手机触屏版获得uc.cn认可，被收录入uc网址导航<br />2014年4月  礼物搜手机触屏版（m.liwuso.com）正式上线<br />2014年1月  礼物搜（www.liwuso.com）独立域名品牌运营<br />2013年6月  礼物搜可可礼物网版（http://www.cocodiy.com/liwusou）正式上线运营</div>]]></item>
        <item><![CDATA[<p>问：礼物搜是什么？<br />答：礼物搜是一款创意的礼物导购应用，<br />您只需要选择送礼的对象、年龄和目的，简单3步就能找到满意的礼物。同时您可以收藏喜欢的商品，以便下次快捷购买。每个重要的节日，礼物搜会推送消息提醒您提前准备节日礼物。</p><p>问：如何购买礼物？<br />答：礼物搜上的商品均精选采集自淘宝网，您可以点击礼物搜上的商品进入淘宝网后进行购买。礼物搜是一款导购应用，我们本身不直接销售商品。</p><p>问：付款方式有哪些，支持货到付款吗？<br />答：礼物搜的商品采集自淘宝网，因此支持淘宝网提供的支付方式。商品是否支持货到付款需联系商家咨询。</p><p>问：为什么我收藏的礼物不见了？<br />答：清空手机缓存可能会导致收藏的礼物消息，后续我们会推出会员注册/登录功能，让收藏的礼物不再丢失。</p>]]></item>
        <item><![CDATA[<p>感谢您使用礼物搜，请仔细阅读以下条款，如果您对本协议的任何条款表示异议，我们不建议您继续使用礼物搜。当您使用礼物搜时，既意味着您完全接受本协议项下的全部条款。</p><p>「使用服务」<br />礼物搜为用户提供快捷专业的礼物导购服务，在使用礼物搜的过程中，以下行为将不被允许：<br />1、不得散播有损于礼物搜声誉的虚假消息；<br />2、不得利用礼物搜各项服务进行复制、出售、转售或其他商业性行为；<br />3、不得对礼物搜进行复制、仿站、镜像；<br />4、不得恶意使用礼物搜各项服务，比如大量恶意点击网站商品。<br /></p><p>「商品信息」<br />商品价格上在网站上都标识，所有价格以人民币计算。商品的图片、价格和销量信息均采集至商家，并不代表该商品的即时信息，请一切以商品对应商家网页面中的信息为准。</p><p>「免责声明」<br />礼物搜上的所有商品均从淘宝网精选采集，非礼物搜销售。商家需对自己的商品和销售行为承担责任。商家在销售过程中与消费者引发的一切纠纷，由该商品的商家承担全部法律及连带责任，礼物搜不承担任何法律及连带责任。<br />礼物搜不保证网络服务一定能满足用户的要求，也不保证网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作保证。对于因不可抗力或礼物搜不能控制的原因造成的网络服务中断或其它缺陷，礼物搜不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。<br /></p><p>「协议修改」<br />根据互联网的发展和有关法律、法规及规范性文件的变化，或者因业务发展需要，该协议将会在不通知您的情况下随时更新，协议更新后，您对礼物搜的继续使用将表明您对新条款的接受。如果您对该协议存在任何疑问，请与我们联系。继续接受服务前，您必须表明您同意遵守此协议的条款及其修改。</p>]]></item>
        <item><![CDATA[<p>您可以通过以下方式与我们取得联系，我们随时等候为您提供优质的服务。</p><p>「联系方式」<br />商务合作：QQ-860269680<br />电子邮箱：860269680@qq.com<br />详细地址：山东省青岛市李沧区台柳路637号<br />邮政编码：266100</p><p>「意见建议」<br />欢迎您随时联系我们提供宝贵的意见和建议，我们随时倾听您的心声。您可以在“意见建议”中提交，也可以通过QQ860269680与我们取得联系。</p><p>「服务时间」<br />周一至周六 09:00~17:30<br />邮件回复时间为：1个工作日内回复<br /></p>]]></item>
    </string-array>
    <string-array name="more_info_title">
        <item>关于礼物搜</item>
        <item>常见问题</item>
        <item>用户协议</item>
        <item>联系我们</item>
        <item>意见建议</item>
    </string-array>
    <string-array name="planets_array">
        <item>按综合排序</item>
        <item>按价格排序</item>
        <item>按人气排序</item>
    </string-array>

</resources>