<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_linearlayout_footer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/footer_border"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout style="@style/footer_container" >

        <Button
            android:id="@+id/bottom_btn_so"
            style="@style/footer_btn"
            android:background="@drawable/footer_ic_so_bg"
            android:enabled="false" />

        <TextView
            style="@style/footer_txt"
            android:enabled="false"
            android:text="@string/menu_so" />
    </LinearLayout>

    <LinearLayout style="@style/footer_container" >

        <Button
            android:id="@+id/bottom_btn_search"
            style="@style/footer_btn"
            android:background="@drawable/footer_ic_search_bg" />

        <TextView
            style="@style/footer_txt"
            android:text="@string/menu_search" />
    </LinearLayout>

    <LinearLayout style="@style/footer_container" >

        <Button
            android:id="@+id/bottom_btn_favorite"
            style="@style/footer_btn"
            android:background="@drawable/footer_ic_favorite_bg" />

        <TextView
            style="@style/footer_txt"
            android:text="@string/menu_favorite" />
    </LinearLayout>

</LinearLayout>