<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_advice"
    style="@style/root_layout_style"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/editAdvice"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@drawable/more_edit_background"
        android:gravity="top"
        android:hint="@string/more_advice_content"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textSize="12sp" >
    </EditText>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/editAdvice"
        android:layout_marginTop="20dp"
        android:background="@drawable/more_edit_background"
        android:hint="@string/more_advice_email"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textSize="12sp" >
    </EditText>

    <Button
        android:id="@+id/btn_more_advice_submit"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        android:text="@string/more_advice_submit"
        android:textColor="@color/white"
        android:textSize="17sp" />

</RelativeLayout>